--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
-    <link rel="stylesheet" href="./style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <nav>
+                <a href="./index.html">Avaleht</a>
+                <a href="./second layout.html">Layout 2</a>
+            </nav>
+        </header>
+        <main>
+            <p class="content">Content</p>
+        </main>
+        <footer>
+            <p class="content">Content</p>
+        </footer>
+    </div>
     
 </body>
 </html>
